transparent scrollbar (working correctly - with fallback when not supported)

--- a/03-navdrawr-minimize-animaton/components/layout/layout.module.scss
+++ b/03-navdrawr-minimize-animaton/components/layout/layout.module.scss
@@ -34,3 +34,14 @@ $background-primary: black;
   display: grid;
   place-items: center;
 }
+
+.main_content {
+  @supports not (overflow-y: overlay) {
+    overflow-y: scroll;
+  }
+
+  @supports (overflow-y: overlay) {
+    overflow-y: overlay;
+    background: yellow;
+  }
+}
